--- a/test/test.jade
+++ b/test/test.jade
@@ -2,17 +2,21 @@ doctype html
 html
     head
         meta(charset="utf-8")
-        title Qunit单元测试
-        link(rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.15.0.css")
+        title Qunit Unit test
+        link(rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css")
     body
         div#qunit
         div#qunit-fixture
 
-        // 框架
-        script(src="http://code.jquery.com/qunit/qunit-1.15.0.js")
-
-        // 公用组件 
-        script(src="http://seajs.org/dist/sea.js")
-
-        // 启动代码
-        script(src="test.js")
+        script(src="../bower_components/qunit/qunit/qunit.js")
+        script(src="../bower_components/requirejs/require.js")
+        script.
+            requirejs.config({
+                baseUrl: '../',
+                paths: {
+                    jquery: 'bower_components/jquery/dist/jquery'
+                }
+            })
+            require(['test/test'], function () {
+                // do nothing
+            })
