update to 0.2.0, support many styles include background-color, bold and others

--- a/test/unit.jade
+++ b/test/unit.jade
@@ -13,10 +13,8 @@ html
         script.
             requirejs.config({
                 baseUrl: '../',
-                paths: {
+                paths  : {
                     jquery: 'bower_components/jquery/dist/jquery'
                 }
             })
-            require(['test/test'], function () {
-                // do nothing
-            })
+            require(['test/test'])
