--- a/test/test-style.jade
+++ b/test/test-style.jade
@@ -13,7 +13,14 @@ html
                 baseUrl: '../'
             })
             require(['src/shell-color'], function (ShellColor) {
-                var sc = new ShellColor
+                var sc = new ShellColor({
+                    //                    colorMap              : {
+                    //                        white: '#cccccc',
+                    //                        black: '#333333'
+                    //                    },
+                    //                    defaultBackgroundColor: 'white',
+                    //                    defaultForegroundColor: 'black'
+                })
                 var str = [
                     'default color',
                     '\x1b[30mblack color',
