--- a/test/unit/unit.jade
+++ b/test/unit/unit.jade
@@ -3,16 +3,16 @@ html
     head
         meta(charset="utf-8")
         title Qunit Unit test
-        link(rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css")
+        link(rel="stylesheet" href="../../node_modules/qunitjs/qunit/qunit.css")
     body
         div#qunit
         div#qunit-fixture
 
-        script(src="../node_modules/qunitjs/qunit/qunit.js")
-        script(src="../node_modules/requirejs/require.js")
+        script(src="../../node_modules/qunitjs/qunit/qunit.js")
+        script(src="../../node_modules/requirejs/require.js")
         script(src="config.js")
         script.
             QUnit.config.autostart = false
-            require(['test/test'], function () {
+            require(['test/unit/test'], function () {
                 QUnit.start()
             })
