--- a/test/manual/test-inline-mode.jade
+++ b/test/manual/test-inline-mode.jade
@@ -2,23 +2,21 @@ doctype html
 html
     head
         meta(charset="utf-8")
-        title style
-        link(href="test-style.css" rel="stylesheet")
+        title Style Test
+        style.
+            span {
+                display:      inline;
+                margin-right: 5px;
+                padding:      4px 0;
+                line-height:  1.8em;
+            }
     body
         div#everything
 
-        script(src="../bower_components/requirejs/require.js")
-        script(src="config.js")
+        script(src="../../node_modules/requirejs/require.js")
+        script(src="../unit/config.js")
         script.
             require(['cjs!src/shell-color'], function (ShellColor) {
-                var sc = new ShellColor({
-                    //                    colorMap              : {
-                    //                        white: '#cccccc',
-                    //                        black: '#333333'
-                    //                    },
-                    //                    defaultBackgroundColor: 'white',
-                    //                    defaultForegroundColor: 'black'
-                })
                 var str = [
                     'default color',
                     '\x1b[30mblack color',
@@ -47,8 +45,14 @@ html
                 ]
 
                 var pre = document.getElementById('everything')
-                var tags = sc.convertToHTMLTags(str.join(''))
-                tags.forEach(function (tag) {
+                ShellColor.toInlineTags(str.join(''), {
+                    colorMap              : {
+                        white: '#dddddd',
+                        black: '#222222'
+                    },
+                    defaultBackgroundColor: 'white',
+                    defaultForegroundColor: 'black'
+                }).forEach(function (tag) {
                     pre.appendChild(tag)
                 })
             })
