update to 1.0.1: change requirejs use of map to path config

--- a/test/manual/test-inline-mode.jade
+++ b/test/manual/test-inline-mode.jade
@@ -16,7 +16,7 @@ html
         script(src="../../node_modules/requirejs/require.js")
         script(src="../unit/config.js")
         script.
-            require(['cjs!src/shell-color'], function (ShellColor) {
+            require(['cjs!src/index'], function (ShellColor) {
                 var str = [
                     'default color',
                     '\x1b[30mblack color',
