--- a/test/manual/test-block-mode.jade
+++ b/test/manual/test-block-mode.jade
@@ -15,7 +15,7 @@ html
         script(src="../../node_modules/requirejs/require.js")
         script(src="../unit/config.js")
         script.
-            require(['cjs!src/index'], function (ShellColor) {
+            require(['src/index'], function (ShellColor) {
                 var div = document.getElementById('everything')
                 ShellColor.toBlockTags([
                     'abc',
